{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 111,
  "lineage": "36b96fc9-a5a3-a66f-e629-1296ce13e2b1",
  "resources": [
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:security-group/sg-047455853d2f50367",
            "description": "Allow all egress and inbound access from specified IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047455853d2f50367",
            "ingress": [
              {
                "cidr_blocks": [
                  "203.0.113.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs_security_group",
            "name_prefix": "",
            "owner_id": "533047435524",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f9beeb25bcb4fef",
            "arn": "arn:aws:ec2:us-east-1:533047435524:elastic-ip/eipalloc-01f9beeb25bcb4fef",
            "association_id": "eipassoc-0b4954d7d651477ed",
            "domain": "vpc",
            "id": "eipalloc-01f9beeb25bcb4fef",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9baa3164ec60f5a",
            "private_dns": "ip-10-0-0-228.ec2.internal",
            "private_ip": "10.0.0.228",
            "public_dns": "ec2-54-225-162-85.compute-1.amazonaws.com",
            "public_ip": "54.225.162.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "StoryGenerationVPC-eip"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:internet-gateway/igw-0cfa22d0e8c2b2d66",
            "id": "igw-0cfa22d0e8c2b2d66",
            "owner_id": "533047435524",
            "tags": {
              "Name": "StoryGenerationVPC-igw"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-igw"
            },
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f9beeb25bcb4fef",
            "association_id": "eipassoc-0b4954d7d651477ed",
            "connectivity_type": "public",
            "id": "nat-05b3e316be91654f9",
            "network_interface_id": "eni-0e9baa3164ec60f5a",
            "private_ip": "10.0.0.228",
            "public_ip": "54.225.162.85",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0507a9ca9d6d82155",
            "tags": {
              "Name": "StoryGenerationVPC-nat"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:route-table/rtb-0218a67e78a80988d",
            "id": "rtb-0218a67e78a80988d",
            "owner_id": "533047435524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3e316be91654f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StoryGenerationVPC-rtb-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-rtb-private1-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:route-table/rtb-0c4f711e28ac9c649",
            "id": "rtb-0c4f711e28ac9c649",
            "owner_id": "533047435524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3e316be91654f9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StoryGenerationVPC-rtb-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-rtb-private2-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:route-table/rtb-017dd6ffb968a8bef",
            "id": "rtb-017dd6ffb968a8bef",
            "owner_id": "533047435524",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cfa22d0e8c2b2d66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "StoryGenerationVPC-rtb-public"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cde55efd63951127",
            "route_table_id": "rtb-0218a67e78a80988d",
            "subnet_id": "subnet-06307c2a3c39f6bf7"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d751b4ea2cbf4a",
            "route_table_id": "rtb-0c4f711e28ac9c649",
            "subnet_id": "subnet-075044af410a60ea2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b7c395e6cda3929",
            "route_table_id": "rtb-017dd6ffb968a8bef",
            "subnet_id": "subnet-0507a9ca9d6d82155"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073551858965b0f21",
            "route_table_id": "rtb-017dd6ffb968a8bef",
            "subnet_id": "subnet-043775ceea4d570f3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:subnet/subnet-06307c2a3c39f6bf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06307c2a3c39f6bf7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533047435524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "StoryGenerationVPC-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:subnet/subnet-075044af410a60ea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075044af410a60ea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533047435524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "StoryGenerationVPC-subnet-private2-us-east-1b"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:subnet/subnet-0507a9ca9d6d82155",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0507a9ca9d6d82155",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533047435524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "StoryGenerationVPC-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:subnet/subnet-043775ceea4d570f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043775ceea4d570f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533047435524",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "StoryGenerationVPC-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:vpc/vpc-0fa973c610f20964b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0813879d0c94e93a7",
            "default_route_table_id": "rtb-0760b7d7c6e7ed89b",
            "default_security_group_id": "sg-061e1e6fd44608bb7",
            "dhcp_options_id": "dopt-0e129a258dd77295b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa973c610f20964b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0760b7d7c6e7ed89b",
            "owner_id": "533047435524",
            "tags": {
              "Name": "StoryGenerationVPC"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533047435524:vpc-endpoint/vpce-01694da70a1b40a5b",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-01694da70a1b40a5b",
            "owner_id": "533047435524",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-017dd6ffb968a8bef",
              "rtb-0218a67e78a80988d",
              "rtb-0c4f711e28ac9c649"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Name": "StoryGenerationVPC-vpce-s3"
            },
            "tags_all": {
              "Name": "StoryGenerationVPC-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0fa973c610f20964b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}